--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,11 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #fafafa;
+  padding: 60px;
+  font-family: "Droid Sans", sans-serif;
+}
+a {
+  text-decoration: none;
+}
