--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: #fafafa;
+  background-color: #e9ebee;
   font-family: "Droid Sans", sans-serif;
 }
 a {
