--- a/src/components/CardCommentary/styles.css
+++ b/src/components/CardCommentary/styles.css
@@ -1,6 +1,6 @@
 .card-commentary-content {
-  width: 300px;
-  height: 300px;
+  width: 15rem;
+  height: 15rem;
   background: #fff;
   margin-bottom: 10px;
   box-shadow: #fff;
